[gd_scene load_steps=6 format=3 uid="uid://es7al1vowl84"]

[ext_resource type="Script" uid="uid://bspmfyn6emhqe" path="res://environmentObjects/magnetMechanics/utility/magManager.gd" id="1_seb5a"]
[ext_resource type="PackedScene" uid="uid://sfmt2bo8ld41" path="res://environmentObjects/magnetMechanics/utility/magnetProjectile.tscn" id="2_mcf7a"]
[ext_resource type="PackedScene" uid="uid://q8cyxdvbdbln" path="res://environmentObjects/magnetMechanics/utility/magnet.tscn" id="3_ucf4p"]
[ext_resource type="Script" uid="uid://b5342dkwh0cy0" path="res://environmentObjects/magnetMechanics/utility/lineLogic.gd" id="4_l1pba"]
[ext_resource type="PackedScene" uid="uid://dmigwedyhqx4p" path="res://environmentObjects/magnetMechanics/utility/selectionLine.tscn" id="5_mewxb"]

[node name="magManager" type="Node2D"]
script = ExtResource("1_seb5a")
projectile = ExtResource("2_mcf7a")
magnet = ExtResource("3_ucf4p")

[node name="magnetDetection" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="magCollision" type="CollisionPolygon2D" parent="magnetDetection"]
modulate = Color(0.462745, 1, 1, 1)
position = Vector2(0, -1)
polygon = PackedVector2Array(50, -80, 0, 0, 50, 80, 2500, 900, 2500, -900)

[node name="lineLogic" type="Node" parent="."]
script = ExtResource("4_l1pba")
selectionLine = ExtResource("5_mewxb")

[node name="projContainer" type="Node" parent="."]

[node name="magContainer" type="Node" parent="."]

[connection signal="area_entered" from="magnetDetection" to="." method="onMagDetectionEntered"]
[connection signal="area_exited" from="magnetDetection" to="." method="onMagDetectionExited"]
